--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fff;
