--- a/client/src/App.css
+++ b/client/src/App.css
@@ -387,17 +387,21 @@ table th {
 /* Animation (Add After) */
 .item-enter {
   opacity: 0;
+  right: 100px;
 }
 .item-enter-active {
   opacity: 1;
-  transition: opacity 1000ms ease-in;
+  right: 0px;
+  transition: opacity 500ms ease-in, right 500ms ease-in;
 }
 .item-exit {
   opacity: 1;
+  left: 0px;
 }
 .item-exit-active {
   opacity: 0;
-  transition: opacity 1000ms ease-in;
+  left: 100px;
+  transition: opacity 500ms ease-out, left 500ms ease-out;
 }
 
 /* Mobile Styles */
